--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Arpit's personal Site</title>
   </head>
   <body>
-    <img src="C:\Users\ARPIT DUBEY\OneDrive\Desktop\Web Development\HTML - Personal Site\Picsart_22-07-03_17-43-11-700-modified.png" width="300" height="300">
+    <img src="image\Picsart_22-07-03_17-43-11-700-modified.png" width="300" height="300">
 <h1> Arpit Dubey </h1>
 <p><em> Arpit Dubey. Passionate about learning new concepts and possess the ability to handle challenging situations as per need.</em></p>
 <p><em><strong><a href="https://en.wikipedia.org/wiki/Computer_engineering">Computer Engineering </a> from <a href="https://www.mctrgit.ac.in/"> RGIT</a></strong>.</em></p>
