--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="utf-8">
     <title>Arpit's personal Site</title>
   </head>
-  <body>
-    <img src="images\Picsart_22-07-03_17-43-11-700-modified.png" width="300" height="300">
-<h1> Arpit Dubey </h1>
-<p><em> Arpit Dubey. Passionate about learning new concepts and possess the ability to handle challenging situations as per need.</em></p>
-<p><em><strong><a href="https://en.wikipedia.org/wiki/Computer_engineering">Computer Engineering </a> from <a href="https://www.mctrgit.ac.in/"> RGIT</a></strong>.</em></p>
+<body>
+    <table cellspacing="20">
+      <tr>
+        <td><img src="images\Picsart_22-07-03_17-43-11-700-modified.png" width="300" height="300"></td>
+        <td><h1> Arpit Dubey </h1>
+        <p><em> Passionate about learning new concepts and possess the ability to handle challenging situations as per need.</em></p>
+        <p><em><strong><a href="https://en.wikipedia.org/wiki/Computer_engineering">Computer Engineering </a> from <a href="https://www.mctrgit.ac.in/"> RGIT</a></strong>.</em></p></td>
+      </tr>
+    </table>
+    
 <hr size="3"><!These are for special line between blocks>
+    
 <h3> QUALIFICATION TILL </h3>
 <ul>
   <li>Completed my Primary and Secondray schooling part with some decent results.</li>
